setup/k8s/6-data-visualization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-metrics-dataviz-service
  namespace: asphalt
spec:
  type: ClusterIP
  selector:
    app: traffic-metrics-dataviz
  ports:
    - protocol: TCP
      port: 80
      targetPort: client
